[project]
name = "bblocks-places"
version = "0.0.1"
description = "A package to work with countries, regions, areas and other geographical or political entities"
authors = [
    {name = "ONE Campaign, Luca Picci"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
